objects/Business_Driver__c.object
<CustomObject>
    <description>Tool for tracking and managing Business Drivers for DataComm</description>
    <fields>
        <fullName>Annual_Potential__c</fullName>
        <label>Annual Potential</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BD_Year__c</fullName>
        <label>BD Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerBD__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Identify the customer related to the Business Driver</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Drivers</relationshipLabel>
        <relationshipName>Business_Drivers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Total_Value__c</fullName>
        <formula>Related_Opportunity_del__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Value__c</fullName>
        <label>Payout Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Goal__c</fullName>
        <label>Project Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Measurable__c</fullName>
        <label>Project Measurable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identify the related sales or engineering opportunity for this Business Driver</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Business Drivers</relationshipLabel>
        <relationshipName>Business_Drivers_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_1_Value__c</fullName>
        <label>Step 1 Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Step_2_Value__c</fullName>
        <label>Step 2 Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Step_3_Value__c</fullName>
        <label>Step 3 Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Business Driver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Business_Drivers</fullName>
        <columns>NAME</columns>
        <columns>Related_Opportunity_del__c</columns>
        <columns>Annual_Potential__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Business Drivers</label>
    </listViews>
    <nameField>
        <label>Business Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>